Test Sandbox Project/src/objects/Case_Chat__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.PersonContact.FirstName &amp; &quot; &quot; &amp; Account__r.PersonContact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Chat</relationshipLabel>
        <relationshipName>Case_Chat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Alias__c</fullName>
        <formula>User__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <label>Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>User__r.FirstName &amp; &quot; &quot; &amp; User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Chat</relationshipLabel>
        <relationshipName>Case_Chat</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Comment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Chat</relationshipLabel>
        <relationshipName>Case_Chat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateddateTZ__c</fullName>
        <formula>TEXT( CreatedDate - ((7 * 60)/1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreateddateTZ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Image_1__c</fullName>
        <label>Image 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_2__c</fullName>
        <label>Image 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_3__c</fullName>
        <label>Image 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Merged_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Merged Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Agent_Reply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Agent Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Messages2__c</fullName>
        <label>Messages</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Messages_Plaintext__c</fullName>
        <label>Messages (Plaintext)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Reply__c</fullName>
        <formula>Case__r.Need_Reply__c</formula>
        <label>Need Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(DATEVALUE(CreatedDate)) == 1, &apos;January&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 2, &apos;February&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 3, &apos;March&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 4, &apos;April&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 5, &apos;May&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 6, &apos;June&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 7, &apos;July&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 8, &apos;August&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 9, &apos;September&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 10, &apos;October&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 11, &apos;November&apos;,
IF ( MONTH(DATEVALUE(CreatedDate)) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Message2__c</fullName>
        <label>Previous Message2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Previous_Message3__c</fullName>
        <label>Previous Message3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Previous_Message__c</fullName>
        <label>Previous Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reply_From__c</fullName>
        <label>Reply From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reply_Hourly__c</fullName>
        <formula>IF ((VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7) &gt; 24,
(VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7 - 24),
(VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply_Hourly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <formula>User__r.Signature_Copy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiket_ID__c</fullName>
        <label>Tiket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>agent</fullName>
                </value>
                <value>
                    <fullName>end-user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Image_Agent__c</fullName>
        <formula>User__r.Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Image Agent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Chat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>(Document_Date__c -
(
DATE(year(Document_Date__c),month(Document_Date__c),1) -
CASE( MOD( DATE(year(Document_Date__c),month(Document_Date__c),1) - DATE(1900, 1, 7), 7),
0, 3,
1, 4,
2, 5,
3, 6,
4, 0,
5, 1,
6, 2
,0)
)) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Inbound__c</fullName>
        <formula>IF (ISBLANK(User__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Outbound__c</fullName>
        <formula>IF (!ISBLANK(User__c), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Chat</label>
    <nameField>
        <label>Case Chat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Chat</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>